@@ -215,3 +215,5 @@ start:
 	jmp	5:[3]
 	call	dword ptr xtrn
 	jmp	word ptr xtrn
+	call	[xtrn]
+	jmp	[xtrn]
